ecs-cluster.tf
# define & build the ecs cluster | ecs-cluster.tf

# create ecs cluster
resource "aws_ecs_cluster" "aws-ecs" {
  name = "aws-ecs"
}

# get latest ecs ami
data "aws_ami" "ecs-ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn2-ami-ecs-hvm-2.0.20221115-x86_64-ebs"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

  owners = ["amazon"]
}

# override ecs ami image

variable "aws_ecs_ami_override" {
  default     = ""
  description = "Machine image to use for ec2 instances"
}

locals {
  aws_ecs_ami = var.aws_ecs_ami_override == "" ? data.aws_ami.ecs-ami.id : var.aws_ecs_ami_override
}

locals {
  ebs_types = ["t2", "t3", "m5", "c5"]

  cpu_by_instance = {
    "t2.small"     = 1024
    "t2.micro"     = 1024
    "t2.large"     = 2048
    "t2.medium"    = 2048
    "t2.xlarge"    = 4096
    "t3.medium"    = 2048
    "m5.large"     = 2048
    "m5.xlarge"    = 4096
    "m5.2xlarge"   = 8192
    "m5.4xlarge"   = 16384
    "m5.12xlarge"  = 49152
    "m5.24xlarge"  = 98304
    "c5.large"     = 2048
    "c5d.large"    = 2048
    "c5.xlarge"    = 4096
    "c5d.xlarge"   = 4096
    "c5.2xlarge"   = 8192
    "c5d.2xlarge"  = 8192
    "c5.4xlarge"   = 16384
    "c5d.4xlarge"  = 16384
    "c5.9xlarge"   = 36864
    "c5d.9xlarge"  = 36864
    "c5.18xlarge"  = 73728
    "c5d.18xlarge" = 73728
  }

  mem_by_instance = {
    "t2.small"     = 1800
    "t2.micro"     = 1000
    "t2.medium"    = 3943
    "t2.large"     = 7975
    "t2.xlarge"    = 16039
    "t3.medium"    = 3884
    "m5.large"     = 7680
    "m5.xlarge"    = 15576
    "m5.2xlarge"   = 31368
    "m5.4xlarge"   = 62950
    "m5.12xlarge"  = 189283
    "m5.24xlarge"  = 378652
    "c5.large"     = 3704
    "c5d.large"    = 3704
    "c5.xlarge"    = 7624
    "c5d.xlarge"   = 7624
    "c5.2xlarge"   = 15463
    "c5d.2xlarge"  = 15463
    "c5.4xlarge"   = 31142
    "c5d.4xlarge"  = 31142
    "c5.9xlarge"   = 70341
    "c5d.9xlarge"  = 70341
    "c5.18xlarge"  = 140768
    "c5d.18xlarge" = 140768
  }
}


# create ec2 instance for the ecs cluster runner
resource "aws_instance" "ecs-cluster-ec2"{
  ami                         = local.aws_ecs_ami
  instance_type               = var.cluster_ec2
  subnet_id                   = element(aws_subnet.aws-subnet.*.id, 0)
  vpc_security_group_ids      = [aws_security_group.ecs-cluster-host.id]
  associate_public_ip_address = true
  user_data                   = "data.template_file.user_data_cluster.rendered"
  count                       = var.cluster_runner_count
  key_name                    = "terraform"
  tags = {
    Name      = "ecs-cluster-ec2"
    Environment = "var.app_environment"
    Role        = "ecs-cluster"
  }

  volume_tags = {
    Name      = "var.app_name-ecs-cluster-ec2"
    Environment = "var.app_environment"
    Role        = "ecs-cluster"
  }
}
